# WealthWatch

./: .dockerignore  .gitignore  .gitlab-ci.yml  CLOUD_RUN.md  Dockerfile  Dockerfile.cloudrun  Makefile  README.md  auth_test.go  docker-compose.yml  expense_test.go  go.mod  go.sum  main.go  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy-cloudrun.yml  deploy.yml
app/: auth.py  config.py  database.py  main.py  models.py
app/routers/: account.py  auth.py  balances.py  budget.py  expenses.py  family.py  groups.py  investment.py  receipts.py  recurring.py  reports.py  rules.py  settlements.py  ui.py
app/static/: app.css  app.js
app/templates/: accounts.html  balances.html  base.html  base_auth.html  budgets.html  cashflow.html  dashboard.html  expenses.html  family.html  groups.html  investments.html  login.html  networth.html  recurring.html  register.html  reports.html  rules.html  settlements.html  transactions.html
config/: config.go
database/: database.go
deploy/cloudrun/: deploy-frontend.sh  deploy.sh  firebase.json  setup.sh
frontend/: .gitignore  package-lock.json  package.json  vite.config.ts
handlers/: account.go  auth.go  auto_rule.go  balance.go  budget_tracker.go  expense.go  family.go  group.go  investment.go  receipt_handler.go  recurring.go  report.go  settlement.go
k8s/: README.md
middleware/: auth.go
models/: account.go  auto_rule.go  budget.go  expense.go  family.go  group.go  investment.go  models.go  networth.go  receipt.go  recurring.go  user.go
routes/: routes.go
scripts/: pre-commit  setup-hooks.sh
services/: split.go
tests/: conftest.py  test_api_accounts.py  test_api_auth.py  test_api_balances.py  test_api_budget.py  test_api_expenses.py  test_api_family.py  test_api_google_auth.py  test_api_groups.py  test_api_investments.py  test_api_recurring.py  test_api_reports.py  test_api_rules.py  test_api_settlements.py  test_auth.py  test_config.py  test_models.py
utils/: auth.go  validation.go
web/: app.js  index.html
(+88 files in other folders)
