[project]
name = "wealthwatch"
version = "0.1.0"
description = "Personal Finance Dashboard"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.21.0",
    "pydantic[email]>=2.10.4",
    "pydantic-settings>=2.7.1",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.1",
    "python-multipart>=0.0.19",
    "python-dotenv>=1.0.1",
    "aiofiles>=24.1.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.4",
    "google-auth>=2.38.0",
    "requests>=2.32.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "alembic>=1.14.1",
    "ruff>=0.15.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:jose",
]

# ── Ruff ──────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E712",   # == True comparisons (required by SQLAlchemy .where() clauses)
    "B008",   # do not perform function calls in argument defaults (FastAPI Depends)
    "RUF012", # mutable class attributes (SQLAlchemy models)
    "TC003",  # move stdlib import to TYPE_CHECKING (SQLAlchemy needs runtime datetime)
    "UP042",  # str+Enum -> StrEnum (keep explicit for SQLAlchemy Enum column compat)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]  # env vars must be set before app imports

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
